--- a/WebsiteDesign/about.html
+++ b/WebsiteDesign/about.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
-    <img src="/img/BackPole.jpeg" alt="">
+    <!-- <img src="/img/BackPole.jpeg" alt=""> -->
     
+
+
+    <div id="instafeed"></div>
+    <div class="gallery" ></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/instafeed.min.js"></script>
+    <script src="js/custom.js"></script>
 </body>
 </html>
